# lab2

./: .gitignore  README.md  pyproject.toml
src/: logger.py  main.py  terminal.py
src/plugins/: archive.py  history.py  search.py
tests/: conftest.py  test_plugins.py  test_terminal.py  test_terminal_errors.py
